# pickem-v2

./: .gitignore  Cargo.toml  README.md  games.db  records.db  teams.db
presets/NFL/: week_1_reg.json
src/: main.rs
src/db/: eval.rs  mod.rs  structs.rs
src/games/: close.rs  create.rs  create_bulk.rs  decide.rs  display.rs  display_bulk.rs  list.rs  mod.rs
src/general/: help.rs
src/user/: record.rs
